Updated archive location

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/sangram11/MASKING
 project_urls =
-    Bug Tracker = https://github.com/sangram11/MASKING
+    Bug Tracker = https://github.com/sangram11/MASKING/tree/master/archive
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
